# restapi

./: .gitignore  Cargo.toml  README.md  base.Dockerfile  build-base.sh  build-derived.sh  deploy-kubernetes-assets.sh  deploy-tls-assets.sh  derived.Dockerfile
certs/: README.md  generate-tls-assets.sh
certs/configs/: dev-network.yml
certs/tls/api/: api-ca.pem  api-chain.pem  api.crt  api.key  api.p12
certs/tls/pgadmin/: pgadmin-chain.pem  pgadmin.crt  pgadmin.key  pgadmin.p12
certs/tls/postgres/: postgres-ca.pem  postgres-chain.pem  postgres.crt  postgres.key  postgres.p12
certs/tls/wildcard/: wildcard-chain.pem  wildcard.crt  wildcard.key  wildcard.p12
charts/: README.md  deploy-tls-and-secrets.sh
charts/rust-restapi/: Chart.yaml  README.md  values.yaml
charts/rust-restapi/templates/: _helpers.tpl  deployment.yaml  service.yaml
docker/db/: .gitignore  README.md  build-postgres.sh  compose.yml  init-db.sh  start.sh
docker/db/env/: postgres.env
docker/db/pgadmin/: db-config.json
docker/db/postgres/: Dockerfile
docker/db/postgres/configs/: pg_hba.conf  postgresql.conf
docker/db/postgres/tls/postgres/: .gitignore  postgres.p12
docker/db/sql/: init.sql  sql_setup.sh  ssl.sql
env/: api.env  kafka.env  postgres.env
examples/: server.rs
jwt/: README.md  private-key-pkcs8.pem  private-key.pem  public-key.pem  recreate-jwt.sh
notes/user/verification/: notes.md
src/: handle_request.rs  lib.rs  mod.rs
src/core/: core_config.rs  mod.rs
src/core/server/: connection_handler.rs  core_http_request.rs  core_server.rs  core_services.rs  core_task_item.rs  mod.rs  run_server.rs  start_core_server.rs
src/is3/: is3.rs  mod.rs  s3_download_to_file.rs  s3_download_to_memory.rs  s3_upload_buffer.rs  s3_upload_file.rs
src/jwt/: api.rs  mod.rs
src/kafka/: mod.rs  publish_msg.rs
src/monitoring/: metrics.rs  mod.rs
src/pools/: get_db_pool.rs  mod.rs
src/requests/: mod.rs
src/requests/auth/: create_user_token.rs  login_user.rs  mod.rs  validate_user_token.rs
src/requests/models/: mod.rs  user.rs  user_data.rs  user_otp.rs  user_verify.rs
src/requests/user/: consume_user_otp.rs  create_otp.rs  create_user.rs  delete_user.rs  get_user.rs  is_verification_enabled.rs  is_verification_required.rs  mod.rs  search_user_data.rs  search_users.rs  update_user.rs  update_user_data.rs  upload_user_data.rs  upsert_user_verification.rs  verify_user.rs
src/tls/: get_tls_config.rs  mod.rs  tls_config.rs  tls_info.rs
src/utils/: get_query_params_from_url.rs  get_server_address.rs  get_uuid.rs  mod.rs  path_exists.rs
src/utils/file_io/: mod.rs  read_file_to_buf.rs  write_buf_to_file.rs
tests/: integration-using-curl.md  run-metric-tests.sh
tls/: README.md  create-tls-assets.sh  deploy-tls-assets.sh
tls/api/: cfssl-server-csr.json
tls/ca/: cfssl-ca.json
tls/kafka-cluster-0/: .gitignore  cfssl-server-csr.json
tls/pgadmin/: cfssl-server-csr.json
tls/postgres/: cfssl-server-csr.json
