[package]
name = "restapi"
description = "A secure-by-default rest api stack implemented with hyper, tokio, bb8 and postgres with prometheus for monitoring. This project is focused on providing end-to-end encryption by default for 12-factor applications looking to customize functionality using environment variables as needed. Includes a working user management and authentication backend written in postgresql with async S3 uploading for POST-ed data files."
version = "1.1.2"
edition = "2021"
license = "MIT"
authors = [
    "Jay Johnson <jayphjohnson@gmail.com>"
]
homepage = "https://docs.rs/restapi/latest/restapi/"
documentation = "https://docs.rs/restapi"
repository = "https://github.com/jay-johnson/restapi"

categories = [
    "asynchronous",
    "database",
    "web-programming",
    "web-programming::http-server",
    "authentication"
]
keywords = [
    "rest_api",
    "secure_by_default",
    "encryption",
    "hyper",
    "tokio"
]
exclude = [
    "base.Dockerfile",
    "derived.Dockerfile",
    "build-base.sh",
    "build-derived.sh",
    "deploy-tls-assets.sh",
    "docker/*",
    "charts/*",
    "notes/*",
    "target/*",
]

[dependencies]
bb8 = { version = "0.7.1" }
bb8-postgres = { version = "0.7.0" }
chrono = { version = "^0.4" }
futures = { version = "^0.3.21" }
hyper = { version = "^0.14.18", features = [ "http1", "http2", "server", "stream", "runtime" ] }
jsonwebtoken = { version = "^7.2.0" }
lazy_static = { version = "^1.4" }
log = { version = "^0.4.16" }
native-tls = { version = "^0.2.8" }
openssl = { version = "0.10.38", features = ["vendored"] }
postgres = { version = "^0.19.2", features = [ "with-geo-types-0_7", "array-impls", "with-chrono-0_4", "with-bit-vec-0_6", "with-serde_json-1", "with-eui48-1", "with-uuid-0_8", "with-time-0_3" ] }
postgres-native-tls = { version = "^0.5.0" }
pretty_env_logger = { version = "^0.4.0" }
prometheus = { version = "0.13.0" }
prometheus-static-metric = { version = "0.5.1" }
rusoto_s3 = { version = "^0.47.0" }
rusoto_core = { version = "^0.47.0" }
rust-argon2 = { version = "^1.0.0" }
rustls = { version = "^0.20.4", features = [ "tls12", "quic" ] }
rustls-pemfile = { version = "^0.3.0" }
serde = { version = "^1.0.136", features = ["derive"] }
serde_json = { version = "^1.0.78" }
tokio = { version = "^1.17.0", features = [ "rt-multi-thread", "macros" ] }
tokio-postgres = { version = "^0.7.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1", "runtime"] }
tokio-rustls = { version = "^0.23.3" }
tokio-test = { version = "^0.4.2" }
url = { version = "2.2.2" }
uuid = { version = "^0.8.2", features = ["serde", "v4", "v5"] }

[lib]
name = "restapi"
path = "src/lib.rs"
