[package]
name = "restapi"
description = "A secure-by-default rest api using hyper, tokio, bb8, kafka-threadpool, postgres, and prometheus for monitoring"
version = "1.1.14"
edition = "2021"
license = "MIT"
authors = [
    "Jay Johnson <jayphjohnson@gmail.com>"
]
homepage = "https://docs.rs/restapi/latest/restapi/"
documentation = "https://docs.rs/restapi"
repository = "https://github.com/jay-johnson/restapi"

categories = [
    "asynchronous",
    "database",
    "web-programming",
    "web-programming::http-server",
    "authentication"
]
keywords = [
    "rest_api",
    "secure_by_default",
    "encryption",
    "hyper",
    "tokio"
]
exclude = [
    "base.Dockerfile",
    "derived.Dockerfile",
    "build-base.sh",
    "build-derived.sh",
    "deploy-tls-assets.sh",
    "docker/*",
    "charts/*",
    "notes/*",
    "target/*",
]

[dependencies]
bb8 = { version = "0.8.0" }
bb8-postgres = { version = "0.8.1" }
chrono = { version = "^0.4.22" }
futures = { version = "^0.3.24" }
hyper = { version = "^0.14.20", features = [ "http1", "http2", "server", "stream", "runtime" ] }
jsonwebtoken = { version = "^8.1.1" }
lazy_static = { version = "^1.4" }
log = { version = "^0.4.17" }
kafka-threadpool = { version = "^1.0.12" }
native-tls = { version = "^0.2.10" }
openssl = { version = "0.10.41", features = ["vendored"] }
postgres = { version = "^0.19.4", features = [ "with-geo-types-0_7", "array-impls", "with-chrono-0_4", "with-bit-vec-0_6", "with-serde_json-1", "with-eui48-1", "with-uuid-0_8", "with-time-0_3" ] }
postgres-native-tls = { version = "^0.5.0" }
pretty_env_logger = { version = "^0.4.0" }
prometheus = { version = "^0.13.2" }
prometheus-static-metric = { version = "^0.5.1" }
rusoto_s3 = { version = "^0.48.0" }
rusoto_core = { version = "^0.48.0" }
rust-argon2 = { version = "^1.0.0" }
rustls = { version = "^0.20.6", features = [ "tls12", "quic" ] }
rustls-pemfile = { version = "^1.0.1" }
serde = { version = "^1.0.145", features = ["derive"] }
serde_json = { version = "^1.0.85" }
tokio = { version = "^1.21.1", features = [ "rt-multi-thread", "macros" ] }
tokio-postgres = { version = "^0.7.7", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1", "runtime"] }
tokio-rustls = { version = "^0.23.4" }
tokio-test = { version = "^0.4.2" }
url = { version = "^2.3.1" }
uuid = { version = "^1.1.2", features = ["serde", "v4", "v5"] }

[lib]
name = "restapi"
path = "src/lib.rs"
